adding codepen link

--- a/color-randomizer/styles.css
+++ b/color-randomizer/styles.css
@@ -3,7 +3,7 @@
 Fonts
 ===============
 */
-@import url('https://fonts.googleapis.com/css?family=Heebo|Open+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Heebo');
 
 /*
 =============== 
